# system-monitor

./: .gitignore  CMakeLists.txt  README.md
src/: gui_manager.cpp  gui_manager.h  main.cpp  system_data.cpp  system_data.h
